Plugins: Fixes overflow issue with the plugin name props @MichaelArestad

--- a/client/my-sites/plugins/plugin-meta/style.scss
+++ b/client/my-sites/plugins/plugin-meta/style.scss
@@ -64,6 +64,7 @@
 
 .plugin-meta__detail {
 	position: relative;
+	width: 100%;
 	flex-grow: 1;
 
 	@include breakpoint( '>480px' ) {
